fix the IE bounce effect in slide/media viewer.  For some reason, animating off screen and ending on screen is instead moving the surroundings and the animated element is stationary :/ So change the animation to simply fade in.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@25371 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_slidedeck.scss
+++ b/src/main/resources/scss/_slidedeck.scss
@@ -1212,7 +1212,7 @@ $experimental-support-for-svg: true;
 
 .x-component-annotation-view{
 	&.presentation-note-slider{
-		@include animate($name: fadeInRight, $duration: 0.35s, $delay: 0s);
+		@include animate(FadeIn);
 
 		border-width: 0px;
 		width: 400px;
@@ -1534,4 +1534,3 @@ body.media-viewer-closing {
 		@include animate(FullScreenSlideInLeft);
 	}
 }
-
